# aztec-monitoring

aztec-github-actions-exporter/: Dockerfile  README.md  build_push_docker.sh  exporter.py  pyproject.toml
gh-ci-analyzer/: main.py  pyproject.toml
infra/: .gitignore  .terraform.lock.hcl  README.md  aztec_github_exporter.tf  grafana.tf  kubernetes.tf  outputs.tf  providers.tf  terraform.tfvars.example  user_data.sh  variables.tf  victoriametrics.tf
infra/charts/aztec-gh-exporter/: Chart.yaml  values.yaml
infra/charts/aztec-gh-exporter/templates/: _helpers.tpl  deployment.yaml  secret.yaml  serviceaccount.yaml
infra/grafana/provisioning/dashboards/: aztec-workflow-dashboard.json  dashboard-provider.yml
infra/grafana/provisioning/datasources/: victoriametrics.yml
