[project]
name = "aztec-github-actions-exporter"
version = "0.1.0"
description = "Prometheus exporter for GitHub Actions metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prometheus-client>=0.19.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]